--- a/LimeStudio/app/src/main/res/layout/fragment_setup_im.xml
+++ b/LimeStudio/app/src/main/res/layout/fragment_setup_im.xml
@@ -1,5 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -439,12 +440,21 @@
     </LinearLayout>
     </ScrollView>
 
-    <RelativeLayout
+    <!--RelativeLayout
     android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/adLayout">
+    </RelativeLayout-->
 
-    </RelativeLayout>
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        ads:adSize="SMART_BANNER"
+        ads:adUnitId="@string/ad_unit_banner">
+    </com.google.android.gms.ads.AdView>
 
 
 </LinearLayout>
