--- a/LimeStudio/app/src/main/res/layout/target.xml
+++ b/LimeStudio/app/src/main/res/layout/target.xml
@@ -33,7 +33,8 @@
             <ListView
                 android:id="@+id/listview_loading_target"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" >
+                android:layout_height="wrap_content"
+                >
             </ListView>
         </TableRow>
 
