--- a/LimeStudio/app/src/main/res/layout/fragment_manage_related.xml
+++ b/LimeStudio/app/src/main/res/layout/fragment_manage_related.xml
@@ -1,6 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:vpadn="http://schemas.android.com/apk/lib/com.vpadn.ads"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -103,14 +103,23 @@
 
     </LinearLayout>
 
-
+    <!-- Vpon
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/adLayout">
 
     </RelativeLayout>
-
+    -->
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        ads:adSize="SMART_BANNER"
+        ads:adUnitId="@string/ad_unit_banner">
+    </com.google.android.gms.ads.AdView>
 
 </LinearLayout>
 <!-- From: file:/C:/Data/Development/Android/Studio/LIMEIMEAS/app/src/main/res/layout/fragment_manage_related.xml -->
