--- a/LimeStudio/app/src/main/res/xml/preference.xml
+++ b/LimeStudio/app/src/main/res/xml/preference.xml
@@ -32,13 +32,13 @@
                 android:key="lime_keyboard"
                 android:title="@string/keyboard"
                 android:summary="">
-        <net.toload.main.hd.limesettings.MultiListPreference 
+       <!-- <net.toload.main.hd.limesettings.MultiListPreference
 				android:key="keyboard_state"
 				android:title="@string/keyboard_list"
 				android:entries="@array/keyboard"
 				android:entryValues="@array/keyboard_defaultstate"
 				android:defaultValue="0;1;2;3;4;5;6;7;8;9;10;11"
-				android:dialogTitle="@string/keyboard_list" />
+				android:dialogTitle="@string/keyboard_list" />-->
 		<CheckBoxPreference
                 android:key="persistent_language_mode"
                 android:title="@string/persistent_language_mode" 
