1. backup to dropbox with progress update.
2. experimental v21 style

--- a/LimeStudio/app/src/main/res/values/colors.xml
+++ b/LimeStudio/app/src/main/res/values/colors.xml
@@ -42,4 +42,12 @@
     <color name="limekeyboard_feedback_language_text">#FFFFFFFF</color>
     <color name="limekeyboard_key_color_white">#FFFFFFFF</color>
     <color name="limekeyboard_key_color_black">#FF000000</color>
+    <color name="limekeyboard_key_color_light">#FF0F0F0F</color>
+    <color name="limekeyboard_key_color_light_hl">#FF4DB6AC</color>
+    <color name="limekeyboard_function_key_color_light">#FF717171</color>
+    <color name="limekeyboard_function_key_color_light_hl">#FF80CBC4</color>
+    <color name="limekeyboard_subkey_color_light">#FF7D7D7D</color>
+    <color name="limekeyboard_subkey_color_light_hl">#FF80CBC4</color>
+
+
 </resources>
