Add IM share module

--- a/LimeStudio/app/src/main/res/menu/global.xml
+++ b/LimeStudio/app/src/main/res/menu/global.xml
@@ -1,6 +1,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/action_share"
+        android:icon="@drawable/ic_menu_share"
+        android:title="@string/action_share"
+        android:orderInCategory="50"
+        app:showAsAction="always" />
+    <item
         android:id="@+id/action_preference"
         android:icon="@drawable/ic_action_settings"
         android:title="@string/action_preference"
