--- a/LimeStudio/app/src/main/res/menu/main.xml
+++ b/LimeStudio/app/src/main/res/menu/main.xml
@@ -3,6 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
     <item
+        android:id="@+id/action_share"
+        android:icon="@drawable/ic_menu_share"
+        android:title="@string/action_share"
+        android:orderInCategory="50"
+        app:showAsAction="always" />
+    <item
         android:id="@+id/action_preference"
         android:icon="@drawable/ic_action_settings"
         android:title="@string/action_preference"
