--- a/LimeStudio/app/src/main/res/layout/fragment_setup_im.xml
+++ b/LimeStudio/app/src/main/res/layout/fragment_setup_im.xml
@@ -239,8 +239,7 @@
                     android:layout_weight="1"
                     android:padding="5dp"
                     android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:enabled="false" />
+                    android:layout_marginRight="10dp" />
             </TableRow>
         </TableLayout>
 
