--- a/LimeStudio/app/src/main/res/values/colors.xml
+++ b/LimeStudio/app/src/main/res/values/colors.xml
@@ -24,7 +24,7 @@
     <color name="candidate_recommended">#FFE35900</color>
     <color name="candidate_other">#FF101010</color>
     <color name="candidate_number">#CC5E5A80</color> 
-    <color name="candidate_background">#BBFAFAFA</color>
+    <color name="candidate_background">#FAFAFA</color>
     <!-- <color name="candidate_background">#bbffffff</color>-->
     <!--composing text view-->
     <color name="composing_text">#FF717171</color>
