--- a/LimeStudio/app/src/main/res/layout/fragment_dialog_im.xml
+++ b/LimeStudio/app/src/main/res/layout/fragment_dialog_im.xml
@@ -4,6 +4,16 @@
     android:layout_height="match_parent"
     android:padding="10dp">
 
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:text="@string/setup_im_backup_learning_data"
+        android:id="@+id/chkSetupImBackupLearning"
+        android:layout_gravity="center_horizontal"
+        android:padding="10dp"
+        android:layout_weight="1"
+        android:checked="true" />
+
     <Button
         android:layout_width="match_parent"
         android:layout_height="0dp"
