--- a/LimeStudio/app/src/main/res/layout/fragment_dialog_edit.xml
+++ b/LimeStudio/app/src/main/res/layout/fragment_dialog_edit.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="vertical" android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -11,11 +11,57 @@
         android:fillViewport="false"
         android:padding="10dp">
 
+
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/manage_word_score"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:paddingBottom="10dp" />
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:baselineAligned="false"
+                android:padding="10dp"
+                android:background="@color/background_score"
+                android:layout_marginBottom="10dp">
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="+"
+                    android:id="@+id/btnManageAddScore"
+                    android:textSize="12pt" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="0"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:id="@+id/edtManageImWordScore"
+                    android:gravity="center"
+                    android:textColor="@android:color/white"
+                    android:editable="false"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp" />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="-"
+                    android:id="@+id/btnManageMinusScore"
+                    android:textSize="12pt" />
+
+            </LinearLayout>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -45,21 +91,6 @@
                 android:layout_weight="1"
                 android:textSize="16pt"
                 android:textIsSelectable="false" />
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/manage_word_code3r"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:id="@+id/txtManageImWordCode3r" />
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/edtManageImWordCode3r"
-                android:layout_weight="1"
-                android:textSize="16pt" />
 
         </LinearLayout>
     </ScrollView>
