--- a/LimeStudio/app/src/main/res/drawable/sym_keyboard_feedback_done.xml
+++ b/LimeStudio/app/src/main/res/drawable/sym_keyboard_feedback_done.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/sym_flat_keyboard_delete" />
+    <item
+        android:drawable="@drawable/sym_flat_keyboard_keyboard" />
 </selector>
