--- a/LimeStudio/app/src/main/res/anim/key_preview_fadein.xml
+++ b/LimeStudio/app/src/main/res/anim/key_preview_fadein.xml
@@ -18,12 +18,10 @@
 */
 -->
 
-<set
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:interpolator="@android:anim/decelerate_interpolator"
->
-    <alpha
-        android:fromAlpha="0.5"
-        android:toAlpha="1.0"
+<set    xmlns:android="http://schemas.android.com/apk/res/android">
+
+
+    -- <alpha android:fromAlpha="0.7"  android:toAlpha="1.0"
+        android:interpolator="@android:anim/accelerate_interpolator"
         android:duration="@integer/config_preview_fadein_anim_time" />
 </set>
