--- a/LimeStudio/app/src/main/res/layout/key_preview.xml
+++ b/LimeStudio/app/src/main/res/layout/key_preview.xml
@@ -20,10 +20,11 @@
 
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="80sp"
+    android:layout_height="120sp"
     android:textSize="40sp"
-    android:textColor="@color/limekeyboard_key_color_black"
+    android:textColor="@color/limekeyboard_key_color_light_hl"
     android:minWidth="32dip"
-    android:gravity="center"
-    android:background="@drawable/keyboard_key_feedback"
+    android:gravity="center|top"
+    android:background="@drawable/btn_flat_keyboard_key_feedback"
+    android:text="W"
     />
