--- a/LimeStudio/app/src/main/res/xml/preference.xml
+++ b/LimeStudio/app/src/main/res/xml/preference.xml
@@ -119,7 +119,7 @@
 			android:key="smart_chinese_input"
 			android:title="@string/preference_smart_chinese_input"
 			android:summary="@string/preference_smart_chinese_input_message"
-			android:defaultValue="true"
+			android:defaultValue="false"
 			/>
 
 
