--- a/LimeStudio/app/src/main/res/values-xlarge-land/dimens.xml
+++ b/LimeStudio/app/src/main/res/values-xlarge-land/dimens.xml
@@ -23,6 +23,7 @@
 
 <resources>
     <dimen name="key_height">76dip</dimen>
+    <dimen name="key_preview_height">150dp</dimen>
     <dimen name="mini_keyboard_fling_vertical_correction">-76dip</dimen>
     <dimen name="candidate_stripe_height">50sp</dimen>
     <dimen name="candidate_font_size">42sp</dimen>
