--- a/LimeStudio/app/src/main/res/values/strings_settings.xml
+++ b/LimeStudio/app/src/main/res/values/strings_settings.xml
@@ -115,8 +115,8 @@
     <string name="cj5_reverse_lookup_list">倉頡五代字根反查</string>
     <string name="ecj_reverse_lookup_list">速成字根反查</string>
     <string name="wb_reverse_lookup_list">筆順五碼字根反查</string>
-    <!--<string name="hs_reverse_lookup_list">華象直覺字根反查</string>
-    --><string name="pinyin_reverse_lookup_list">拼音字根反查</string>
+    <string name="hs_reverse_lookup_list">華象直覺字根反查</string>
+    <string name="pinyin_reverse_lookup_list">拼音字根反查</string>
 
     <string name="han_convert_option_list">中文簡/繁體字碼轉換</string>
     <string name="selkey_option_list">設定選字鍵預選順序</string>
@@ -265,7 +265,7 @@
         <item>行列</item>
         <item>行列10</item>
         <item>筆順五碼</item>
-        <!--<item>華象直覺</item>-->
+        <item>華象直覺</item>
         <item>拼音</item>
     </string-array>
     <string-array name="im_reverse_lookup_codes">
@@ -281,8 +281,8 @@
         <item>array</item>
         <item>array10</item>
         <item>wb</item>
-        <!--<item>hs</item>
-        --><item>pinyin</item>
+        <item>hs</item>
+        <item>pinyin</item>
     </string-array>
     <!-- Keyboard Selection List -->
     <string-array name="keyboard">
@@ -297,7 +297,7 @@
         <item>行列輸入法</item>
         <item>行列10輸入法</item>
         <item>筆順五碼輸入法</item>
-        <!--<item>華象直覺輸入法</item>-->
+        <item>華象直覺輸入法</item>
         <item>拼音輸入法</item>
     </string-array>
     <!-- Keyboard short name List -->
@@ -313,7 +313,7 @@
         <item>行列</item>
         <item>行列10</item>
         <item>筆順五碼</item>
-       <!-- <item>華象直覺</item>-->
+       <item>華象直覺</item>
         <item>拼音</item>
     </string-array>
     <string-array name="keyboard_defaultstate">
@@ -328,7 +328,7 @@
         <item>true</item>
         <item>true</item>
         <item>true</item>
-       <!-- <item>true</item>-->
+        <item>true</item>
         <item>true</item>
     </string-array>
     <string-array name="keyboard_codes">
@@ -343,8 +343,8 @@
         <item>array</item>
         <item>array10</item>
         <item>wb</item>
-        <!--<item>hs</item>
-        --><item>pinyin</item>
+        <item>hs</item>
+        <item>pinyin</item>
     </string-array>
     <string-array name="table_codes">
         <item>custom</item>
@@ -358,8 +358,8 @@
         <item>array</item>
         <item>array10</item>
         <item>wb</item>
-        <!--<item>hs</item>
-        --><item>pinyin</item>
+        <item>hs</item>
+        <item>pinyin</item>
         <item>related</item>
         <item>dictionary</item>
     </string-array>
@@ -386,7 +386,7 @@
         <item>行列</item>
         <item>行列10</item>
         <item>筆順五碼</item>
-        <!--<item>華象直覺</item>-->
+        <item>華象直覺</item>
         <item>拼音</item>
         <item>預載關聯字</item>
         <item>英文字典</item>
@@ -421,8 +421,8 @@
     <string name="l3_manage_array">行列</string>
     <string name="l3_manage_array10">行列10</string>
     <string name="l3_manage_wb">筆順五碼</string>
-   <!-- <string name="l3_manage_hs">華象直覺</string>
-   --> <string name="l3_manage_pinyin">拼音</string>
+    <string name="l3_manage_hs">華象直覺</string>
+    <string name="l3_manage_pinyin">拼音</string>
 
     <string name="l3_tab_preference">喜好設定</string>
 
@@ -578,11 +578,14 @@
     <string name="l3_im_download_from_pinyin_gb_start">開始下載拼音字根簡體字集版本</string>
     <string name="l3_im_download_from_pinyin_gb_install">開始安裝拼音字根簡體字集版本</string>
 
-<!--
-    <string name="l3_im_download_from_hs">請使用[初始資料庫]下載及安裝華象直覺字根\n華象直覺輸入法發明人陳華偉製作\nTel:(07)2223133 手機：0933616029\nhs.h123@msa.hinet.net</string>
+
+    <string name="l3_im_download_from_hs">華象完整版\n華象直覺輸入法發明人陳華偉製作\nTel:(07)2223133 手機：0933616029\nhs.h123@msa.hinet.net</string>
+    <string name="l3_im_download_from_hs_v1">華象一版</string>
+    <string name="l3_im_download_from_hs_v2">華象二版</string>
+    <string name="l3_im_download_from_hs_v3">華象三版</string>
     <string name="l3_im_download_from_hs_start">開始下載華象直覺字根</string>
     <string name="l3_im_download_from_hs_install">開始安裝華象直覺字根</string>
--->
+
 
     <string name="l3_im_download_from_wb">安裝筆順五碼字根\n香港長者資訊天地提供</string>
     <string name="l3_im_download_from_wb_start">開始下載筆順五碼字根</string>
