--- a/LimeStudio/app/src/main/res/values-zh-rCN/strings_settings.xml
+++ b/LimeStudio/app/src/main/res/values-zh-rCN/strings_settings.xml
@@ -115,8 +115,8 @@
     <string name="cj5_reverse_lookup_list">仓颉五代字根反查</string>
     <string name="ecj_reverse_lookup_list">速成字根反查</string>
     <string name="wb_reverse_lookup_list">笔顺五码字根反查</string>
-    <!--<string name="hs_reverse_lookup_list">华象直觉字根反查</string>
-    --><string name="pinyin_reverse_lookup_list">拼音字根反查</string>
+    <string name="hs_reverse_lookup_list">华象直觉字根反查</string>
+    <string name="pinyin_reverse_lookup_list">拼音字根反查</string>
 
     <string name="han_convert_option_list">中文简/繁体字码转换</string>
     <string name="selkey_option_list">设定选字键预选顺序</string>
@@ -265,7 +265,7 @@
         <item>行列</item>
         <item>行列10</item>
         <item>笔顺五码</item>
-        <!--<item>华象直觉</item>-->
+        <item>华象直觉</item>
         <item>拼音</item>
     </string-array>
     <string-array name="im_reverse_lookup_codes">
@@ -281,8 +281,8 @@
         <item>array</item>
         <item>array10</item>
         <item>wb</item>
-        <!--<item>hs</item>
-        --><item>pinyin</item>
+        <item>hs</item>
+        <item>pinyin</item>
     </string-array>
     <!-- Keyboard Selection List -->
     <string-array name="keyboard">
@@ -297,7 +297,7 @@
         <item>行列输入法</item>
         <item>行列10输入法</item>
         <item>笔顺五码输入法</item>
-        <!--<item>华象直觉输入法</item>-->
+        <item>华象直觉输入法</item>
         <item>拼音输入法</item>
     </string-array>
     <!-- Keyboard short name List -->
@@ -313,7 +313,7 @@
         <item>行列</item>
         <item>行列10</item>
         <item>笔顺五码</item>
-        <!-- <item>华象直觉</item>-->
+        <item>华象直觉</item>
         <item>拼音</item>
     </string-array>
     <string-array name="keyboard_defaultstate">
@@ -328,7 +328,7 @@
         <item>true</item>
         <item>true</item>
         <item>true</item>
-        <!-- <item>true</item>-->
+        <item>true</item>
         <item>true</item>
     </string-array>
     <string-array name="keyboard_codes">
@@ -343,8 +343,8 @@
         <item>array</item>
         <item>array10</item>
         <item>wb</item>
-        <!--<item>hs</item>
-        --><item>pinyin</item>
+        <item>hs</item>
+        <item>pinyin</item>
     </string-array>
     <string-array name="table_codes">
         <item>custom</item>
@@ -358,8 +358,8 @@
         <item>array</item>
         <item>array10</item>
         <item>wb</item>
-        <!--<item>hs</item>
-        --><item>pinyin</item>
+        <item>hs</item>
+        <item>pinyin</item>
         <item>related</item>
         <item>dictionary</item>
     </string-array>
@@ -386,7 +386,7 @@
         <item>行列</item>
         <item>行列10</item>
         <item>笔顺五码</item>
-        <!--<item>华象直觉</item>-->
+        <item>华象直觉</item>
         <item>拼音</item>
         <item>预载关联字</item>
         <item>英文字典</item>
@@ -421,8 +421,8 @@
     <string name="l3_manage_array">行列</string>
     <string name="l3_manage_array10">行列10</string>
     <string name="l3_manage_wb">笔顺五码</string>
-    <!-- <string name="l3_manage_hs">华象直觉</string>
-    --> <string name="l3_manage_pinyin">拼音</string>
+    <string name="l3_manage_hs">华象直觉</string>
+    <string name="l3_manage_pinyin">拼音</string>
 
     <string name="l3_tab_preference">喜好设定</string>
 
@@ -578,11 +578,13 @@
     <string name="l3_im_download_from_pinyin_gb_start">开始下载拼音字根简体字集版本</string>
     <string name="l3_im_download_from_pinyin_gb_install">开始安装拼音字根简体字集版本</string>
 
-    <!--
-        <string name="l3_im_download_from_hs">请使用[初始数据库]下载及安装华象直觉字根\n华象直觉输入法发明人陈华伟制作\nTel:(07)2223133 手机：0933616029\nhs.h123@msa.hinet.net</string>
-        <string name="l3_im_download_from_hs_start">开始下载华象直觉字根</string>
-        <string name="l3_im_download_from_hs_install">开始安装华象直觉字根</string>
-    -->
+
+    <string name="l3_im_download_from_hs">华象完整版\n华象直觉输入法发明人陈华伟制作\nTel:(07)2223133 手机：0933616029\nhs.h123@msa.hinet.net</string>
+    <string name="l3_im_download_from_hs_v1">华象一版</string>
+    <string name="l3_im_download_from_hs_v2">华象二版</string>
+    <string name="l3_im_download_from_hs_v3">华象三版</string>
+    <string name="l3_im_download_from_hs_start">开始下载华象直觉字根</string>
+    <string name="l3_im_download_from_hs_install">开始安装华象直觉字根</string>
 
     <string name="l3_im_download_from_wb">安装笔顺五码字根\n香港长者资讯天地提供</string>
     <string name="l3_im_download_from_wb_start">开始下载笔顺五码字根</string>
