--- a/LimeStudio/app/src/main/res/xml/preference.xml
+++ b/LimeStudio/app/src/main/res/xml/preference.xml
@@ -258,13 +258,13 @@
     			android:entryValues="@array/im_reverse_lookup_codes" 
     			android:dialogTitle="@string/im_reverse_lookup_list" 
     			android:defaultValue="none"/>
-   <!--	<ListPreference
+   	<ListPreference
     			android:key="hs_im_reverselookup"
     			android:title="@string/hs_reverse_lookup_list" 
     			android:entries="@array/im_reverse_lookup" 
     			android:entryValues="@array/im_reverse_lookup_codes" 
     			android:dialogTitle="@string/im_reverse_lookup_list" 
-    			android:defaultValue="none"/>-->
+    			android:defaultValue="none"/>
    	<ListPreference
     			android:key="pinyin_im_reverselookup"
     			android:title="@string/pinyin_reverse_lookup_list" 
