fixed brief code display issue

--- a/LimeStudio/app/src/main/res/menu/main.xml
+++ b/LimeStudio/app/src/main/res/menu/main.xml
@@ -38,11 +38,11 @@
         android:title="@string/action_preference"
         android:orderInCategory="100"
         app:showAsAction="always" />
-    <item
+    <!--<item
         android:id="@+id/action_news"
         android:title="@string/action_news"
         android:orderInCategory="150"
-        app:showAsAction="never" />
+        app:showAsAction="never" />-->
     <item
         android:id="@+id/action_help"
         android:title="@string/action_help"
