adjust the width display of grid view

--- a/LimeStudio/app/src/main/res/layout/fragment_manage_im.xml
+++ b/LimeStudio/app/src/main/res/layout/fragment_manage_im.xml
@@ -103,7 +103,8 @@
             android:verticalSpacing="2dp"
             android:horizontalSpacing="2dp"
             android:choiceMode="multipleChoice"
-            android:columnWidth="80dp">
+            android:columnWidth="150dp"
+            android:clickable="true">
 
         </GridView>
 
