Add full-shaped semicolon in symbol popup keyboard

--- a/LimeStudio/app/src/main/res/xml/popup_c_punctuation.xml
+++ b/LimeStudio/app/src/main/res/xml/popup_c_punctuation.xml
@@ -38,6 +38,7 @@
         <Key limehd:keyLabel="「" />
         <Key limehd:keyLabel="？" />
         <Key limehd:keyLabel="：" />
+        <Key limehd:keyLabel="．" />
         <Key limehd:keyLabel="。" limehd:keyEdgeFlags="right" />
     </Row>
     <Row limehd:rowEdgeFlags="bottom">
@@ -46,6 +47,7 @@
         <Key limehd:keyLabel="』" />
         <Key limehd:keyLabel="」" />
         <Key limehd:keyLabel="！" />
+        <Key limehd:keyLabel="；" />
         <Key limehd:keyLabel="、" />
         <Key limehd:keyLabel="，" limehd:keyEdgeFlags="right" />
     </Row>
