--- a/LimeStudio/app/src/main/res/values/colors.xml
+++ b/LimeStudio/app/src/main/res/values/colors.xml
@@ -50,10 +50,16 @@
     <color name="limekeyboard_key_color_black">#FF000000</color>
     <color name="limekeyboard_key_color_light">#FF0F0F0F</color>
     <color name="limekeyboard_key_color_light_hl">#FF4DB6AC</color>
+    <color name="limekeyboard_key_color_dark">#FFF7F7F7</color>
+    <color name="limekeyboard_key_color_dark_hl">#FF4DB6AC</color>
     <color name="limekeyboard_function_key_color_light">#FF717171</color>
     <color name="limekeyboard_function_key_color_light_hl">#FF80CBC4</color>
+    <color name="limekeyboard_function_key_color_dark">#FF6B6B6B</color>
+    <color name="limekeyboard_function_key_color_dark_hl">#FF80CBC4</color>f
     <color name="limekeyboard_subkey_color_light">#FF7D7D7D</color>
     <color name="limekeyboard_subkey_color_light_hl">#FF80CBC4</color>
+    <color name="limekeyboard_subkey_color_dark">#FF6B6B6B</color>
+    <color name="limekeyboard_subkey_color_dark_hl">#FF80CBC4</color>
 
     <color name="background_score">#88333333</color>
 
