--- a/LimeStudio/app/src/main/res/drawable/keyboard_background.xml
+++ b/LimeStudio/app/src/main/res/drawable/keyboard_background.xml
@@ -29,7 +29,7 @@
         android:radius="1.5dp"
         />
     <solid
-        android:color="#C8C8C8"
+        android:color="#FFC8C8C8"
         />
     <padding
         android:left="1dp"
