--- a/LimeStudio/app/src/main/res/layout/inputcandidate.xml
+++ b/LimeStudio/app/src/main/res/layout/inputcandidate.xml
@@ -70,11 +70,10 @@
         android:id="@+id/keyboard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true" 
-		android:background="@drawable/keyboard_background"
-        android:keyBackground="@drawable/btn_keyboard_key"
+        android:layout_alignParentBottom="true"
         android:keyTextSize = "@dimen/key_text_size"
         android:labelTextSize = "@dimen/label_text_size"
-        android:popupLayout="@layout/keyboard_popup" />
-    
+        android:popupLayout="@layout/keyboard_popup"
+        style="?attr/LIMEKeyboardViewLayout"
+        />
 </net.toload.main.hd.candidate.CandidateInInputViewContainer>
