--- a/LimeStudio/app/src/main/res/values/styles.xml
+++ b/LimeStudio/app/src/main/res/values/styles.xml
@@ -24,12 +24,6 @@
 
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="android:alertDialogStyle">@style/LIMEAlertDialogTheme</item>
-        <item name="composingTextColor">@color/composing_text</item>
-        <item name="composingTextBackGroundColor">@color/composing_background</item>
-    </style>
     <style name="LIMEAlertDialogTheme" parent="@android:style/Theme.Dialog">
         </style>
     <style name="LIMEKeyboardLight">
@@ -45,21 +39,28 @@
         <item name="spacebarSlidingRightArrow">@drawable/ic_suggest_strip_scroll_right_arrow</item>
 
     </style>
-    <style name="LIMEKeyboardBaseViewLight">
+    <style name="LIMEKeyboardDark">
+        <item name="spaceKeyIcon">@drawable/sym_keyboard_space</item>
+        <item name="spaceKeyPreviewIcon">@drawable/sym_keyboard_space</item>
+        <item name="enterKeyIcon">@drawable/sym_keyboard_return</item>
+        <item name="enterKeyPreviewIcon">@drawable/sym_keyboard_return</item>
+        <item name="searchKeyIcon">@drawable/sym_keyboard_search</item>
+        <item name="searchKeyPreviewIcon">@drawable/sym_keyboard_search</item>
+        <item name="spacebarVerticalCorrection">@dimen/spacebar_vertical_correction</item>
+        <item name="spacebarSlidingTextSize">@dimen/spacebar_preview_text_size</item>
+        <item name="spacebarSlidingLeftArrow">@drawable/ic_suggest_strip_scroll_left_arrow</item>
+        <item name="spacebarSlidingRightArrow">@drawable/ic_suggest_strip_scroll_right_arrow</item>
 
+    </style>
+    <style name="LIMEKeyboardViewLayoutLight">
         <item name="android:background">@drawable/keyboard_background</item>
-        <item name="keyBackground">@drawable/btn_keyboard_key</item>
-        <item name="keyTextSize">@dimen/key_text_size</item>
-
-        <item name="keyTextColorNormal">@color/limekeyboard_key_color_light</item>
-        <item name="keyTextColorPressed">@color/limekeyboard_key_color_light_hl</item>
-
-        <item name="functionKeyTextColorNormal">@color/limekeyboard_function_key_color_light</item>
-        <item name="functionKeyTextColorPressed">@color/limekeyboard_function_key_color_light_hl</item>
-
-        <item name="keySubLabelTextColorNormal">@color/limekeyboard_subkey_color_light</item>
-        <item name="keySubLabelTextColorPressed">@color/limekeyboard_subkey_color_light_hl</item>
-
+        <item name="android:keyBackground">@drawable/btn_keyboard_key</item>
+    </style>
+    <style name="LIMEKeyboardViewLayoutDark">
+        <item name="android:background">@drawable/keyboard_background_dark</item>
+        <item name="android:keyBackground">@drawable/btn_keyboard_key_dark</item>
+    </style>
+    <style name="LIMEKeyboardBaseView">
         <item name="keyPreviewLayout">@layout/key_preview</item>
         <item name="keyPreviewOffset">@dimen/key_preview_offset</item>
         <item name="keyPreviewHeight">@dimen/key_preview_height</item>
@@ -75,6 +76,37 @@
         <item name="backgroundDimAmount">0.5</item>
         <item name="symbolColorScheme">white</item>
     </style>
+    <style name="LIMEKeyboardBaseView.Light">
+        <item name="android:background">@drawable/keyboard_background</item>
+        <item name="keyBackground">@drawable/btn_keyboard_key</item>
+        <item name="keyTextSize">@dimen/key_text_size</item>
+
+        <item name="keyTextColorNormal">@color/limekeyboard_key_color_light</item>
+        <item name="keyTextColorPressed">@color/limekeyboard_key_color_light_hl</item>
+
+        <item name="functionKeyTextColorNormal">@color/limekeyboard_function_key_color_light</item>
+        <item name="functionKeyTextColorPressed">@color/limekeyboard_function_key_color_light_hl</item>
+
+        <item name="keySubLabelTextColorNormal">@color/limekeyboard_subkey_color_light</item>
+        <item name="keySubLabelTextColorPressed">@color/limekeyboard_subkey_color_light_hl</item>
+
+    </style>
+
+    <style name="LIMEKeyboardBaseView.Dark">
+        <item name="android:background">@drawable/keyboard_background_dark</item>
+        <item name="keyBackground">@drawable/btn_keyboard_key_dark</item>
+        <item name="keyTextSize">@dimen/key_text_size</item>
+
+        <item name="keyTextColorNormal">@color/limekeyboard_key_color_dark</item>
+        <item name="keyTextColorPressed">@color/limekeyboard_key_color_dark_hl</item>
+
+        <item name="functionKeyTextColorNormal">@color/limekeyboard_function_key_color_dark</item>
+        <item name="functionKeyTextColorPressed">@color/limekeyboard_function_key_color_dark_hl</item>
+
+        <item name="keySubLabelTextColorNormal">@color/limekeyboard_subkey_color_dark</item>
+        <item name="keySubLabelTextColorPressed">@color/limekeyboard_subkey_color_dark_hl</item>
+    </style>
+
     <style name="KeyPreviewAnimation">
         <item name="android:windowEnterAnimation">@anim/key_preview_fadein</item>
         <item name="android:windowExitAnimation">@anim/key_preview_fadeout</item>
