1. Revert sliding space bar preview icon to show next and previous IM.
2. Show current IM name on space key preview icon
3. Tune dimes and remove resolution dependent dimes with only size
dependent dimes left.

--- a/LimeStudio/app/src/main/res/values/dimens.xml
+++ b/LimeStudio/app/src/main/res/values/dimens.xml
@@ -53,7 +53,9 @@
     <dimen name="mini_keyboard_fling_vertical_correction">-46dip</dimen>
     <dimen name="mini_keyboard_slide_allowance">0.553in</dimen>
     <dimen name="spacebar_preview_text_size">25sp</dimen>
-    <dimen name="key_preview_height">120dp</dimen>
+    <dimen name="spacebar_preview_top_padding">10dip</dimen>
+    <dimen name="preview_top_padding">0dip</dimen>
+    <dimen name="key_preview_height">110dp</dimen>
     <dimen name="key_preview_text_size_large">40sp</dimen>
     <dimen name="key_preview_offset">0.000in</dimen>
     <dimen name="key_bottom_gap">0.035in</dimen>
