--- a/LimeStudio/app/src/main/res/values-land/dimens.xml
+++ b/LimeStudio/app/src/main/res/values-land/dimens.xml
@@ -25,13 +25,16 @@
 
 <resources>
     <dimen name="key_height">36dip</dimen>
+    <dimen name="key_preview_height">95dp</dimen>
     <dimen name="mini_keyboard_fling_vertical_correction">-36dip</dimen>
     <dimen name="candidate_stripe_height">32sp</dimen>
     <dimen name="candidate_font_size">28sp</dimen>
     <dimen name="candidate_number_font_size">14sp</dimen>
     <dimen name="candidate_vertical_padding">4sp</dimen>
     <dimen name="composing_text_size">18sp</dimen>
-    
+
+    <dimen name="spacebar_preview_top_padding">8dip</dimen>
+    <dimen name="preview_top_padding">0dip</dimen>
     <!-- WB -->
     <dimen name="wb_key_height">48dip</dimen>
     
