--- a/LimeStudio/app/src/main/res/values-xlarge-land/dimens.xml
+++ b/LimeStudio/app/src/main/res/values-xlarge-land/dimens.xml
@@ -25,7 +25,10 @@
 
 <resources>
     <dimen name="key_height">76dip</dimen>
-    <dimen name="key_preview_height">150dp</dimen>
+    <dimen name="key_preview_height">160dp</dimen>
+    <dimen name="spacebar_preview_top_padding">20dip</dimen>
+    <dimen name="spacebar_preview_text_size">30sp</dimen>
+
     <dimen name="mini_keyboard_fling_vertical_correction">-76dip</dimen>
     <dimen name="candidate_stripe_height">50sp</dimen>
     <dimen name="candidate_font_size">42sp</dimen>
