--- a/LimeStudio/app/src/main/res/values-xlarge/dimens.xml
+++ b/LimeStudio/app/src/main/res/values-xlarge/dimens.xml
@@ -28,8 +28,11 @@
     <dimen name="phone_key_height">80dip</dimen>
     <dimen name="key_height">84dip</dimen>
     <dimen name="mini_keyboard_fling_vertical_correction">-84dip</dimen>
-    <dimen name="key_preview_height">165dp</dimen>
+    <dimen name="key_preview_height">180dp</dimen>
     <dimen name="spacebar_vertical_correction">4dip</dimen>
+    <dimen name="spacebar_preview_top_padding">25dip</dimen>
+    <dimen name="spacebar_preview_text_size">30sp</dimen>
+
     <dimen name="candidate_stripe_height">50sp</dimen>
     <dimen name="candidate_font_size">42sp</dimen>
     <dimen name="candidate_number_font_size">21sp</dimen>
@@ -42,7 +45,7 @@
     <dimen name="composing_text_size">28sp</dimen>
     <dimen name="notice_text_size">20sp</dimen>
     <dimen name="keyboard_vertical_correction">-0.05in</dimen>
-    <dimen name="spacebar_preview_text_size">35sp</dimen>
+
  	<dimen name="mini_keyboard_vertical_correction">-0.05in</dimen>
  	
  	
