--- a/LimeStudio/app/src/main/res/values/attrs.xml
+++ b/LimeStudio/app/src/main/res/values/attrs.xml
@@ -46,6 +46,9 @@
         <!-- Size of the label text with sub-label for custom keys with some text and no icon. -->
         <attr name="smallLabelTextSize" format="dimension" />
 
+        <!-- Top padding of normalkey space key preview popup for sliding IM switching. -->
+        <attr name="previewTopPadding" format="dimension" />
+        <attr name="spacePreviewTopPadding" format="dimension" />
 
         <!-- Color to use for the label in a key. -->
         <attr name="keyTextColorNormal" format="color" />
