--- a/LimeStudio/app/src/main/res/values-xlarge-land/dimens.xml
+++ b/LimeStudio/app/src/main/res/values-xlarge-land/dimens.xml
@@ -25,21 +25,22 @@
 
 <resources>
     <dimen name="key_height">76dip</dimen>
-    <dimen name="key_preview_height">160dp</dimen>
-    <dimen name="spacebar_preview_top_padding">20dip</dimen>
-    <dimen name="spacebar_preview_text_size">30sp</dimen>
+    <dimen name="key_preview_height">175dp</dimen>
+    <dimen name="spacebar_preview_top_padding">15dip</dimen>
+    <dimen name="spacebar_preview_text_size">35sp</dimen>
 
     <dimen name="mini_keyboard_fling_vertical_correction">-76dip</dimen>
     <dimen name="candidate_stripe_height">50sp</dimen>
-    <dimen name="candidate_font_size">42sp</dimen>
+    <dimen name="candidate_font_size">45sp</dimen>
     <dimen name="candidate_number_font_size">18sp</dimen>
     <dimen name="candidate_vertical_padding">8sp</dimen>
-    <dimen name="key_text_size">36dip</dimen>
-    <dimen name="label_text_size">30dip</dimen>
+    <dimen name="key_text_size">35dp</dimen>
+    <dimen name="label_text_size">24dp</dimen>
+    <dimen name="sub_label_text_size">24dp</dimen>
+    <dimen name="small_label_text_size">28dp</dimen>
+
     <dimen name="composing_text_size">28sp</dimen>
-    <dimen name="sub_label_text_size">30dp</dimen>
-    <dimen name="small_label_text_size">36dp</dimen>
-    
+
     <!-- WB -->
     <dimen name="wb_key_height">92dip</dimen>
 </resources>
