--- a/LimeStudio/app/src/main/res/values/attrs.xml
+++ b/LimeStudio/app/src/main/res/values/attrs.xml
@@ -26,6 +26,8 @@
     <declare-styleable name="KeyboardTheme">
         <attr name="LIMEKeyboardViewStyle" format="reference" />
         <attr name="LIMEKeyboardViewLayout" format="reference" />
+        <attr name="LIMEBaseKeyboardKeyStyle" format="reference" />
+
     </declare-styleable>
 
     <declare-styleable name="LIMEKeyboardBaseView">
@@ -98,13 +100,6 @@
             <flag name="white" value="0" />
             <flag name="black" value="1" />
         </attr>
-
-    </declare-styleable>
-    <declare-styleable name="LIMEKey">
-        <!-- Image for the key. This image needs to be a StateListDrawable, with the following
-                possible states: normal, pressed, checkable, checkable+pressed, checkable+checked,
-                checkable+checked+pressed. -->
-        <attr name="testAttribute" format="string" />
 
     </declare-styleable>
 
