--- a/LimeStudio/app/src/main/res/values/themes.xml
+++ b/LimeStudio/app/src/main/res/values/themes.xml
@@ -33,12 +33,15 @@
   </style>
 
   <style name="LIMETheme.Light">
-    <item name="LIMEKeyboardViewStyle">@style/LIMEKeyboardBaseView.Light</item>
+    <item name="LIMEKeyboardStyle">@style/LIMEKeyboardLight</item>
+    <item name="LIMEBaseKeyboardStyle">@style/LIMEBaseKeyboardLight</item>
+    <item name="LIMEKeyboardBaseView">@style/LIMEKeyboardBaseView.Light</item>
     <item name="LIMEKeyboardViewLayout">@style/LIMEKeyboardViewLayoutLight</item>
-    
   </style>
   <style name="LIMETheme.Dark">
-    <item name="LIMEKeyboardViewStyle">@style/LIMEKeyboardBaseView.Dark</item>
+    <item name="LIMEKeyboardStyle">@style/LIMEKeyboardDark</item>
+    <item name="LIMEBaseKeyboardStyle">@style/LIMEBaseKeyboardDark</item>
+    <item name="LIMEKeyboardBaseView">@style/LIMEKeyboardBaseView.Dark</item>
     <item name="LIMEKeyboardViewLayout">@style/LIMEKeyboardViewLayoutDark</item>
   </style>
   
