--- a/LimeStudio/app/src/main/res/values/styles.xml
+++ b/LimeStudio/app/src/main/res/values/styles.xml
@@ -27,12 +27,15 @@
     <style name="LIMEAlertDialogTheme" parent="@android:style/Theme.Dialog">
         </style>
     <style name="LIMEKeyboardLight">
-        <item name="spaceKeyIcon">@drawable/sym_flat_keyboard_space</item>
+        <item name="spaceKeyIcon">@drawable/sym_keyboard_space</item>
         <item name="spaceKeyPreviewIcon">@drawable/sym_flat_keyboard_space</item>
         <item name="enterKeyIcon">@drawable/sym_keyboard_return</item>
         <item name="enterKeyPreviewIcon">@drawable/sym_keyboard_return</item>
         <item name="searchKeyIcon">@drawable/sym_keyboard_search</item>
         <item name="searchKeyPreviewIcon">@drawable/sym_keyboard_search</item>
+        <item name ="doneKeyIcon">@drawable/sym_keyboard_done</item>
+        <item name ="deleteKeyIcon">@drawable/sym_keyboard_delete</item>
+        <item name ="shiftKeyIcon">@drawable/sym_keyboard_shift</item>
         <item name="spacebarVerticalCorrection">@dimen/spacebar_vertical_correction</item>
         <item name="spacebarSlidingTextSize">@dimen/spacebar_preview_text_size</item>
         <item name="spacebarSlidingLeftArrow">@drawable/ic_suggest_strip_scroll_left_arrow</item>
@@ -40,12 +43,15 @@
 
     </style>
     <style name="LIMEKeyboardDark">
-        <item name="spaceKeyIcon">@drawable/sym_flat_keyboard_space_hl</item>
+        <item name="spaceKeyIcon">@drawable/sym_keyboard_space_dark</item>
         <item name="spaceKeyPreviewIcon">@drawable/sym_flat_keyboard_space_hl</item>
-        <item name="enterKeyIcon">@drawable/sym_keyboard_return</item>
-        <item name="enterKeyPreviewIcon">@drawable/sym_keyboard_return</item>
-        <item name="searchKeyIcon">@drawable/sym_keyboard_search</item>
+        <item name="enterKeyIcon">@drawable/sym_keyboard_return_dark</item>
+        <item name="enterKeyPreviewIcon">@drawable/sym_flat_keyboard_space_hl</item>
+        <item name="searchKeyIcon">@drawable/sym_keyboard_search_dark</item>
         <item name="searchKeyPreviewIcon">@drawable/sym_keyboard_search</item>
+        <item name ="doneKeyIcon">@drawable/sym_keyboard_done_dark</item>
+        <item name ="deleteKeyIcon">@drawable/sym_keyboard_delete_dark</item>
+        <item name ="shiftKeyIcon">@drawable/sym_keyboard_shift_dark</item>
         <item name="spacebarVerticalCorrection">@dimen/spacebar_vertical_correction</item>
         <item name="spacebarSlidingTextSize">@dimen/spacebar_preview_text_size</item>
         <item name="spacebarSlidingLeftArrow">@drawable/ic_suggest_strip_scroll_left_arrow</item>
@@ -125,7 +131,7 @@
         <item name="drawableArrowUp">@drawable/sym_keyboard_up</item>
         <item name="drawableArrowDown">@drawable/sym_keyboard_down</item>
         <item name="drawableArrowRight">@drawable/sym_keyboard_right</item>
-        <item name="drawableArrowLeft">@drawable/sym_keyboard_left</item>
+        <item name="drawableArrowLeft">@drawable/sym_keyboard_left</item>>
     </style>
     <style name="LIMEBaseKeyboardDark">
 
